--- a/.tmux.conf
+++ b/.tmux.conf
@@ -73,7 +73,7 @@ bind Enter source-file ~/.tmux.conf \; display "Config reloaded"
 bind c new-window -c "#{pane_current_path}"
 
 # Prompt to rename window right after it's created
-set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
+# set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
 
 # Rename session and window
 bind r command-prompt -I "#{window_name}" "rename-window '%%'"
@@ -335,6 +335,7 @@ bind '$' run "~/.tmux/renew_env.sh"
 # ===       Plugins        ===
 # ============================
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/logging'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-online-status'
@@ -345,9 +346,11 @@ set -g @plugin 'samoshkin/tmux-plugin-sysstat'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @resurrect-capture-pane-content 'on'
-#set -g @resurrect-processes ''
-set -g @continuum-boot 'on'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-processes 'ssh nvim'
+# @continuum-boot controls when the tmux server is started (on OS/login boot);
+#set -g @continuum-boot 'on'
+# @continuum-restore controls what happens when a fresh tmux server starts (auto-run a tmux-resurrect restore).
 set -g @continuum-restore 'on'
 
 # Plugin properties
