--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@
 # ===  General settings  ===
 # ==========================
 
+set -g renumber-windows on
 set -g default-terminal "screen-256color"
 set -g history-limit 100000
 set -g buffer-limit 20
@@ -349,7 +350,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-processes 'ssh nvim'
 # @continuum-boot controls when the tmux server is started (on OS/login boot);
-#set -g @continuum-boot 'on'
+# set -g @continuum-boot 'on'
 # @continuum-restore controls what happens when a fresh tmux server starts (auto-run a tmux-resurrect restore).
 set -g @continuum-restore 'on'
 
