--- a/zk/config.toml
+++ b/zk/config.toml
@@ -79,7 +79,7 @@ t = "zk edit --interactive --tag $argv"
 #config = 'nvim "$HOME/.config/zk/config.toml"'
 
 # new note
-ne = 'zk new --no-input "$ZK_NOTEBOOK_DIR/ideas" --title $argv'
+ne = 'zk new --no-input "$ZK_NOTEBOOK_DIR" --title $argv'
 
 # update zk notes
 update = "cd $ZK_NOTEBOOK_DIR; git add -A; git commit -am 'updating'; git push; cd -"
