--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,7 @@
 # ===  General settings  ===
 # ==========================
 
+set -g focus-events on
 set -g renumber-windows on
 set -g default-terminal "screen-256color"
 set -g history-limit 100000
